添加license头